[build-system]
requires = [
    "setuptools >= 77",
    "cmake",
]
build-backend = "setuptools.build_meta"

[project]
name = "llama_cpp_binaries"
version = "0.61.0"
description = "Binaries for llama.cpp server"
license = "AGPL-3.0-only"
requires-python = ">= 3.9"

[tool.setuptools.packages.find]
include = ["llama_cpp_binaries*"]
namespaces = false

[tool.setuptools.package-data]
"llama_cpp_binaries" = ["bin/*"]
